--- a/css/app.scss
+++ b/css/app.scss
@@ -3,6 +3,21 @@ body, h1, h2, h3, h4, h5 { font-family: 'Raleway', Helvetica, sans-serif;}
 #body {
     opacity: 0;
 }
+small {
+    text-transform: uppercase;
+    color: #8a8a8a;
+    display: block;
+    margin-top: 2em;
+}
+small a {
+    color: #50688f;
+}
+small a:hover {
+    color: #50688f;
+}
+small a:visited {
+    color: #50688f;
+}
 .meta {
     font-size: 18px;
     text-transform: uppercase;
@@ -272,9 +287,14 @@ a:focus, a:hover {
         bottom: 15%;
     }
 }
-@media screen and (min-width: 75em) {
+@media screen and (min-width: 75em) and (max-width: 85.9375em) {
     section#section1 .text-block { 
         bottom: 20%;
+    }
+}
+@media screen and (min-width: 86em) {
+    section#section1 .text-block { 
+        bottom: 30%;
     }
 }
 @import url(/css/foundation.min.css);
