--- a/css/app.scss
+++ b/css/app.scss
@@ -50,6 +50,7 @@ section {
             }
             .text-block {
                 position: absolute;
+                bottom: 15%;
             }
             :focus { outline: #f17777; }
             background-image: url(../img/jason-2.png);
