--- a/css/app.scss
+++ b/css/app.scss
@@ -1,8 +1,5 @@
 @import url(https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap);
 body, h1, h2, h3, h4, h5 { font-family: 'Raleway', Helvetica, sans-serif;}
-#body {
-    opacity: 0;
-}
 small {
     text-transform: uppercase;
     color: #bbb;
@@ -249,9 +246,9 @@ ul li .grid-x .medium-4 {
 }
 *{box-sizing: border-box;}
 
-.container{
+.container {
   max-width: 1360px;
-  margin: 2em auto 0 auto;
+  margin: 3em auto 0 auto;
 }
 
 .flex-row {
@@ -260,15 +257,26 @@ ul li .grid-x .medium-4 {
   width: 100%;
   display: flex;
   flex-direction: row;
-  background-color: #f3f3f3;
 }
-
 .flex-column{
   align-items: flex-start;
   height: 100%;
   max-width: 1360px;
   display: flex;
   flex-direction: column;
+}
+.flex-column:nth-child(n+2) {
+    background-color: #f3f3f3;
+    border-radius: 0 10px 0 0;
+}
+img.left-img {
+    border-radius: 10px 0 0 10px;
+}
+img.right-img {
+    border-radius: 0 0 10px 0;
+}
+div.right-side {
+    
 }
 .hamburger {
     color: #fff;
@@ -292,7 +300,7 @@ a:focus, a:hover {
     width: 235px;
     padding: 1.5em 2em;
     margin: 2em 0;
-    border-right: 1px dotted #cacaca;
+    border-right: 1px dotted #a8b4c7;
 }
 .contact-info {
     width: 235px;
@@ -306,6 +314,10 @@ a:focus, a:hover {
   .flex-column, .flex-row{
     display: block;
   }
+  .flex-column:nth-child(n+2) {
+    background-color: transparent;
+
+    }
   img.grid-img {
     width: 100%;
   }
@@ -329,7 +341,10 @@ a:focus, a:hover {
     }
     .connect svg {
         float: none;
-    }  
+    }
+    ul#logos {
+        margin-right: 2em;
+    }
 }
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
     section#section1 .text-block { 
